:bug: 캐러셀 버튼 움직이게 z-index 변경
.

--- a/src/components/CategoryDetail/category-detail.module.css
+++ b/src/components/CategoryDetail/category-detail.module.css
@@ -12,7 +12,7 @@
   flex-direction: column;
   width: 66%;
   justify-content: center;
-  z-index: -2;
+  z-index: 1;
 }
 
 
